@@ -1,5 +1,7 @@
 08 August 2008
 
+* Sort fetch list for POP3 to preserve server mailbox order, requested
+  by Jeremy C Reed.
 * Fix bug where current user could overwrite default-user/command-user
   from configuration file.
 
@@ -846,4 +848,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.198 2008-08-08 17:00:42 nicm Exp $
+$Id: CHANGES,v 1.199 2008-08-08 20:14:15 nicm Exp $
